--- a/static/index.html
+++ b/static/index.html
@@ -28,11 +28,13 @@
 
 			<ul data-role="listview" data-inset="true" data-theme="b" data-icon="arrow-r" data-dividertheme="f">
 				<li data-role="list-divider"><h1>Destinations</h1></li>
-				<li><a href="/vail" data-transition="slide" data-ajax="false">Vail</a></li>
+				<li><a href="/vail" data-transition="slide" data-ajax="false">Vail Ski</a></li>
 				<li><a href="/breckinridge" data-transition="slide" data-ajax="false">Breckenridge</a></li>
                 <li><a href="/keystone" data-transition="slide" data-ajax="false">Keystone</a></li>
 			</ul>
 
 		</div><!--/content-primary-->
+        </div>
+        </div>
 </body>
 </html>
